# stratego

./: .gitignore  Cargo.toml  README.md  stratego.dot
src/: main.rs
static/: index.html  script.js  style.css
