[package]
name = "stratego"
version = "0.1.0"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]

[dependencies]
rocket =         { git = "https://github.com/SergioBenitez/Rocket.git", rev = "a4292ba" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "a4292ba" }
#rocket = "0.2.7"
#rocket_codegen = "0.2.7"

# Serialization and templating dependencies.
serde = "1.0"
serde_derive = "1.0"
rmp-serde = { version = "^0.13", optional = true }

[dependencies.rocket_contrib]
# version = "0.2.7"
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "a4292ba"
default-features = false
features = ["msgpack", "json"]