[package]
name = "stratego"
version = "0.1.0"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"

# Serialization and templating dependencies.
serde = "1.0"
serde_derive = "1.0"
serde_json = "*"
#rmp-serde = { version = "^0.13.7", optional = true }


[dependencies.rocket_contrib]
version = "0.3.0"
default-features = false

features = ["msgpack", "json"]
